Release 0.7